--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@codewithdan/marvel-mcp",
-  "version": "1.5.0",
-  "description": "Marvel APIs MCP Server demo",
+  "name": "@codewithdan/dc-comics-mcp",
+  "version": "1.0.0",
+  "description": "DC Comics APIs MCP Server using Comic Vine API",
   "license": "MIT",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "bin": {
-    "marvel-mcp": "./dist/index.js"
+    "dc-comics-mcp": "./dist/index.js"
   },
   "author": {
     "name": "Dan Wahlin",
@@ -16,11 +16,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/danwahlin/marvel-mcp"
+    "url": "https://github.com/danwahlin/dc-comics-mcp"
   },
-  "homepage": "https://github.com/danwahlin/marvel-mcp",
+  "homepage": "https://github.com/danwahlin/dc-comics-mcp",
   "bugs": {
-    "url": "https://github.com/danwahlin/marvel-mcp/issues"
+    "url": "https://github.com/danwahlin/dc-comics-mcp/issues"
   },
   "type": "module",
   "main": "index.js",
@@ -33,7 +33,8 @@
     "ai",
     "genai",
     "api",
-    "marvel",
+    "dc-comics",
+    "comic-vine",
     "comics"
   ],
   "release": {
@@ -54,7 +55,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.14",
+    "@types/node": "^22.13.17",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9",
     "semantic-release": "^24.2.3",
