--- a/smithery.yaml
+++ b/smithery.yaml
@@ -6,20 +6,16 @@ startCommand:
     # JSON Schema defining the configuration options for the MCP.
     type: object
     required:
-      - marvelPublicKey
-      - marvelPrivateKey
+      - comicVineApiKey
     properties:
-      marvelPublicKey:
+      comicVineApiKey:
         type: string
-        description: Your Marvel API public key.
-      marvelPrivateKey:
+        description: Your Comic Vine API key.
+      comicVineApiBase:
         type: string
-        description: Your Marvel API private key.
-      marvelApiBase:
-        type: string
-        default: https://gateway.marvel.com/v1/public
-        description: The base URL for the Marvel API. Defaults to
-          'https://gateway.marvel.com/v1/public'.
+        default: https://comicvine.gamespot.com/api
+        description: The base URL for the Comic Vine API. Defaults to
+          'https://comicvine.gamespot.com/api'.
   commandFunction:
     # A JS function that produces the CLI command based on the given config to start the MCP on stdio.
     |-
@@ -27,12 +23,10 @@ startCommand:
       command: 'node',
       args: ['dist/index.js'],
       env: {
-        MARVEL_PUBLIC_KEY: config.marvelPublicKey,
-        MARVEL_PRIVATE_KEY: config.marvelPrivateKey,
-        MARVEL_API_BASE: config.marvelApiBase
+        COMIC_VINE_API_KEY: config.comicVineApiKey,
+        COMIC_VINE_API_BASE: config.comicVineApiBase
       }
     })
   exampleConfig:
-    marvelPublicKey: YOUR_PUBLIC_KEY_HERE
-    marvelPrivateKey: YOUR_PRIVATE_KEY_HERE
-    marvelApiBase: https://gateway.marvel.com/v1/public
+    comicVineApiKey: YOUR_API_KEY_HERE
+    comicVineApiBase: https://comicvine.gamespot.com/api
