--- a/package.json
+++ b/package.json
@@ -49,11 +49,10 @@
     "release:check": "semantic-release --dry-run"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.8.0",
+    "@modelcontextprotocol/sdk": "^1.9.0",
     "dotenv": "^16.4.7",
     "zod": "^3.24.2",
-    "zod-to-json-schema": "^3.24.5",
-    "node-fetch": "^3.3.2"
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@types/node": "^22.13.17",
