--- a/package.json
+++ b/package.json
@@ -43,19 +43,25 @@
   },
   "scripts": {
     "start": "tsx ./src/index.ts",
+    "start:http": "tsx ./src/server.ts",
     "build": "npx tsc",
     "watch": "npx tsc --watch",
     "dev": "npx tsc && concurrently \"npx tsc --watch\" \"nodemon dist/index.js\"",
+    "dev:http": "npx tsc && concurrently \"npx tsc --watch\" \"nodemon dist/server.js\"",
     "inspect": "npx @modelcontextprotocol/inspector node build/index.js",
     "release:check": "semantic-release --dry-run"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pino": "^9.6.0",
+    "pino-pretty": "^13.0.0",
     "zod": "^3.24.3",
     "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.10",
